Fix image distortion [F21-D11-50]

--- a/angular-frontend/src/app/item/item.component.scss
+++ b/angular-frontend/src/app/item/item.component.scss
@@ -133,8 +133,7 @@ $gold-l2: #FEFCEE;
     }
 }
 
-.image {
-    width: 400px; 
+.image { 
     height: 400px; 
 }
 
